--- a/contact.html
+++ b/contact.html
@@ -299,7 +299,7 @@
 
             if (alertBox) {
               alertBox.textContent =
-                "Thank you — your message has been recorded.";
+                "Thank you, we'll be in touch soon.";
               alertBox.classList.add("show");
             }
 
